--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   "author": "compilenix@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "6.0.1"
+    "fs-extra": "^7.0.0"
   },
   "devDependencies": {
-    "eslint-config-standard": "11.0.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-promise": "3.8.0",
-    "eslint-plugin-standard": "3.1.0",
-    "standard": "11.0.1",
-    "@types/node": "^10.3.3"
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "standard": "^12.0.1",
+    "@types/node": "^10.11.2"
   }
 }
